--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             font-family: fantasy;
             text-align: center
         }
-        p{ 
+
+        p {
             font-size: 15px;
             font-family: cursive;
 
@@ -39,13 +40,14 @@
             border-radius: 150%;
             background-color: rgb(0, 255, 64);
         }
-        .lead{ 
+
+        .lead {
             font-family: cursive;
             text-align: center;
             font-size: 20px
-
         }
-        li{
+
+        li {
             font-size: 15px;
             font-family: cursive;
 
@@ -60,10 +62,13 @@
 
         }
     </style>
-          <div class="container">
-            <h1 class="heading_reset">INDEPENDENT ELECTORAL COMMISION</h1>
-            <p class="lead">Welcome to the official election portal for the 2023 general elections!</p>
-        </div>
+    <nav class="navbar navbar-dark bg-dark">
+        <button type="submit"><a href="C:\Users\kunmie\Desktop\778\election_web\views\log_in_page.html">Login</a></button>
+    </nav>
+    <div class="container">
+        <h1 class="heading_reset">INDEPENDENT ELECTORAL COMMISION</h1>
+        <p class="lead">Welcome to the official election portal for the 2023 general elections!</p>
+    </div>
     <div>
         <h2>Eligibility to contest as a candidate</h2>
         <p>To be eligible to contest, prospective contestants should have met the following requirements before
